week02/giwoong/backend/LoginStudy/src/main/java/com/example/loginstudy/global/error/dto/ErrorResponse.java
package com.example.loginstudy.global.error.dto;

public record ErrorResponse(
        int statusCode,
        String message
) {
}